@@ -5,6 +5,7 @@
  411447 Header pane loses selection when deleting articles (Jeff Berman)
  411657 Post window's cursor appears in the wrong place (Frank Tabor)
  411659 saving a second draft confuses the post window's file dialog (Charles)
+ 411959 profile's `Reply-To' header not used in posting dialog (Mimi Doucet)
 
 0.125 "Potzrebie"
  408767 connection-limit change not recognized until restart (Chuck)
